cmake_minimum_required(VERSION 3.26)
project(Assignment1_initial)

set(CMAKE_CXX_STANDARD 11)

add_executable(Assignment1_initial main.cpp
        Point.cpp
        Point.h
        Monomial.cpp
        Monomial.h
        FunctionRn.cpp
        FunctionRn.h
        Adam.cpp
        Adam.h
        Test1.h
        Test2.h
        Test2B.h
        Test3.h)
